@@ -2,6 +2,7 @@ package simulation;
 
 import java.io.FileNotFoundException;
 import java.io.FileReader;
+import java.net.SocketException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -10,6 +11,7 @@ import org.jivesoftware.smack.chat2.Chat;
 import org.jivesoftware.smack.chat2.ChatManager;
 import org.jivesoftware.smack.chat2.IncomingChatMessageListener;
 import org.jivesoftware.smack.packet.Message;
+import org.jivesoftware.smack.packet.Presence;
 import org.jxmpp.jid.EntityBareJid;
 import org.jxmpp.jid.EntityFullJid;
 import org.jxmpp.jid.impl.JidCreate;
@@ -24,7 +26,10 @@ import eu.cpswarm.optimization.messages.MessageSerializer;
 import eu.cpswarm.optimization.messages.OptimizationStatusMessage;
 import eu.cpswarm.optimization.messages.StartOptimizationMessage;
 import eu.cpswarm.optimization.parameters.Parameter;
+import eu.cpswarm.optimization.parameters.ParameterOptimizationConfiguration;
 import eu.cpswarm.optimization.statuses.OptimizationStatusType;
+import eu.cpswarm.optimization.statuses.OptimizationTaskStatus;
+import eu.cpswarm.optimization.statuses.OptimizationToolStatus;
 import eu.cpswarm.optimization.messages.RunSimulationMessage;
 import eu.cpswarm.optimization.messages.SimulationResultMessage;
 
@@ -37,6 +42,10 @@ import eu.cpswarm.optimization.messages.SimulationResultMessage;
 public final class OptimizationMessageEventCoordinatorImpl implements IncomingChatMessageListener {
 	private DummyOptimizationTool parent = null;
 	private Boolean stopOptimzation = false; 
+	private int resultID = 1;
+	private List<Parameter> parameters = null;
+	private OptimizationRunSimulationSender sender = null;
+	private Thread runSimulationSenderThread = null;
 	
 	public OptimizationMessageEventCoordinatorImpl(DummyOptimizationTool parent) {
 		this.parent = parent;
@@ -52,101 +61,61 @@ public final class OptimizationMessageEventCoordinatorImpl implements IncomingCh
 		try {
 			reader = new JsonReader(new FileReader("src/main/resources/candidate.json"));
 		} catch (FileNotFoundException e1) {
-			// TODO Auto-generated catch block
 			e1.printStackTrace();
 		}
-		List<Parameter> parameters = gson.fromJson(reader, new TypeToken<List<Parameter>>(){}.getType()); 
+		parameters = gson.fromJson(reader, new TypeToken<List<Parameter>>(){}.getType()); 
 		// CHeck if the optimization ID has not been yet set (before the start optimization 
 		// or if the optimization ID is equal to the one set
 		if(parent.getOptimizationID()==null   // before receiving StartOptimization, OID = null
 					|| (parent.getOptimizationID()!=null && parent.getOptimizationID().equals(msgReceived.getOptimizationId()))) {
 			if(msgReceived instanceof SimulationResultMessage) {
 				SimulationResultMessage result = (SimulationResultMessage) msgReceived;
-				// emergency_exit SCID is used to test simulations that conclude immediately
-				if(this.stopOptimzation ||
-						parent.getSCID().equals("emergency_exit")) {
-					if(result.getFitnessValue()==100.0 && result.getSuccess()==true) {
-						OptimizationStatusMessage message1 = new OptimizationStatusMessage(parent.getOptimizationID(), OptimizationStatusType.COMPLETE, 100.0, parent.getOptimizationConfiguration().getMaximumGeneration(), parent.getOptimizationConfiguration().getMaximumGeneration(), parameters, parent.getOptimizationConfiguration());
-						Message msg1 = new Message();
-						msg1.setBody(serializer.toJson(message1));
-						ChatManager chatManager = org.jivesoftware.smack.chat2.ChatManager.getInstanceFor(parent.getConnection());
-						try {
-							Chat chatToUse = chatManager.chatWith(parent.getOrchestratorJid().asEntityBareJidIfPossible());
-							chatToUse.send(msg1);
-						} catch (NotConnectedException | InterruptedException e) {
-							e.printStackTrace();
-						}
-					}
-				// cpswarm_sar is used for optimizations that doesn't have to finish immediately because used to test the OT recovery  
-				} else if(parent.getSCID().equals("cpswarm_sar")) {
-			//		String newSimulationID = UUID.randomUUID().toString();
-					int newSID = new Integer(parent.getSimulationID()).intValue()+1;
-					String newSimulationID = String.valueOf(newSID);
-					parent.setSimulationID(newSimulationID);
-					RunSimulationMessage runSimulation = new RunSimulationMessage(parent.getOptimizationID(), newSimulationID, Long.valueOf(1234).longValue(), parameters);
-					try {
-						ChatManager chatManager = ChatManager.getInstanceFor(parent.getConnection());
-						chat = chatManager.chatWith(msg.getFrom().asEntityBareJidIfPossible());						
-						chat.send(gson.toJson(runSimulation));
-					} catch (NullPointerException | NotConnectedException | InterruptedException e) {
-						e.printStackTrace();
-					}
-				}
+				resultID = new Integer(result.getSimulationId()).intValue();
+				
 			} else if(msgReceived instanceof StartOptimizationMessage) {
 				StartOptimizationMessage start = (StartOptimizationMessage) msgReceived; 
-				parent.setOptimizationID(start.getOptimizationId());   /*---ADD-----Frevo's OID should be set when receiving the StartOptimization msg, not set in constructor */
-				parent.setOptimizationConfiguration(start.getConfiguration());
-				parent.setSCID(start.getSimulationConfigurationId());
-				System.out.println("OptimizationTool received StartOptimization: "+msg.getBody());
-				OptimizationStatusMessage reply = new OptimizationStatusMessage(start.getOptimizationId(), OptimizationStatusType.STARTED, 0.0, start.getConfiguration().getGeneration(),start.getConfiguration().getMaximumGeneration(), new ArrayList<Parameter>(), start.getConfiguration());  // default values
-				String messageToSend = serializer.toJson(reply); 
-				message.setBody(messageToSend);
-				System.out.println("Sending reply to the StartOptimization: "+messageToSend);
-				try {
-					chat.send(message);
-				} catch (NotConnectedException | InterruptedException e) {
-					System.out.println("Error sending the reply");
-					e.printStackTrace();
-				}
-				String simulationID = "";
-				int sid = 0;
-				if(parent.getSimulationID()!=null) {
-					sid = new Integer(parent.getSimulationID()).intValue();
-				}
-				for(EntityFullJid manager : parent.getManagers()) {
-					while(parent.isOffline()) {
-						System.out.println("OT is offline, waiting..........\n");
-						try {
-							Thread.sleep(3000);
-						} catch (InterruptedException e) {
-							e.printStackTrace();
-						}
-					}
-					sid += 1;  // SID increases by 1 each time
-					simulationID = String.valueOf(sid);
-					parent.setSimulationID(simulationID);
-					RunSimulationMessage runSimulation = new RunSimulationMessage(parent.getOptimizationID(), simulationID, Long.valueOf(1234).longValue(), parameters);
-					ChatManager chatManager = ChatManager.getInstanceFor(parent.getConnection());
-					chat = chatManager.chatWith(manager.asEntityBareJid());
+				if(runSimulationSenderThread != null) {
+					this.sender.setCanRun(false);
 					try {
-						chat.send(gson.toJson(runSimulation));
-					} catch (NotConnectedException | InterruptedException e) {
+					//	Thread.sleep(5000);
+						runSimulationSenderThread.join();
+						sender = null;
+					} catch (InterruptedException e) {
 						e.printStackTrace();
 					}
 				}
+				this.sender = new OptimizationRunSimulationSender(parent, start);
+				runSimulationSenderThread = new Thread(sender);
+				runSimulationSenderThread.start();
+				
 			} else if(msgReceived instanceof GetOptimizationStatusMessage) {
 				GetOptimizationStatusMessage getOptimizationStatus = (GetOptimizationStatusMessage) msgReceived;
-				System.out.println("OptimizationTool received GetOptimizationStatus: "+serializer.toJson(getOptimizationStatus));
+				System.out.println("\nOptimizationTool received GetOptimizationStatus for "+getOptimizationStatus.getOptimizationId());
+				if(!parent.getTasksList().get(0).getOptimizationId().equals(getOptimizationStatus.getOptimizationId())) {
+					System.out.println("\nNo any existing optimization task");
+					return;
+				}
 				OptimizationStatusType status = null;
-				if(parent.isOptimizationError()) {
+				if(parent.getGeneration() == parent.getMaxGeneration()) {
+					status = OptimizationStatusType.COMPLETE;
+				} else if(parent.getTasksList().get(0).getStatusType().equals(OptimizationStatusType.ERROR)) {
+					System.out.println("\n opt error...................................."  );
 					status = OptimizationStatusType.ERROR;
 				} else {
-					status = OptimizationStatusType.RUNNING;
+					if(parent.getTasksList().get(0).getStatusType().equals(OptimizationStatusType.RUNNING)) {
+						status = OptimizationStatusType.RUNNING;
+					}else {
+						status = OptimizationStatusType.STARTED;
+					}
 				}
-				OptimizationStatusMessage optimizationStatus = new OptimizationStatusMessage(parent.getOptimizationID(), status, 80.0, 2, parent.getOptimizationConfiguration().getMaximumGeneration(), parameters, parent.getOptimizationConfiguration());
+				OptimizationStatusMessage optimizationStatus = null;
+				if(status.equals(OptimizationStatusType.COMPLETE))
+					optimizationStatus = new OptimizationStatusMessage(parent.getOptimizationID(), status, 98.0, parent.getGeneration(), parent.getMaxGeneration(), parameters, parent.getOptimizationConfiguration());
+				else
+					optimizationStatus = new OptimizationStatusMessage(parent.getOptimizationID(), status, 80.0, parent.getGeneration(), parent.getMaxGeneration(), parameters, parent.getOptimizationConfiguration());
 				String messageToSend = serializer.toJson(optimizationStatus);
 				message.setBody(messageToSend);
-				System.out.println("OptimizationTool sending optimization staus "+messageToSend);
+				System.out.println("OptimizationTool sending optimizationStaus "+messageToSend);
 				try {
 					chat.send(message);
 				} catch (NotConnectedException | InterruptedException e) {
@@ -154,9 +123,8 @@ public final class OptimizationMessageEventCoordinatorImpl implements IncomingCh
 					e.printStackTrace();
 				}
 			}  else {
-				System.out.println("Reply received: " + msg.getBody());
+				System.out.println("OptimizationTool received message: " + msg.getBody());
 			}
-
 		}
 	}
 	
@@ -169,6 +137,11 @@ public final class OptimizationMessageEventCoordinatorImpl implements IncomingCh
 	public void setStopOptimization(boolean stop) {
 		this.stopOptimzation = stop;
 		System.out.println("\n set the last stop candidate\n");
+		try {
+			Thread.sleep(10000);
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
 		//It sends a run simulation message to restart the optimization if it has been stopped
 		int newSID = new Integer(parent.getSimulationID()).intValue()+1;
 		String newSimulationID = String.valueOf(newSID);
@@ -177,7 +150,6 @@ public final class OptimizationMessageEventCoordinatorImpl implements IncomingCh
 		try {
 			reader = new JsonReader(new FileReader("src/main/resources/candidate.json"));
 		} catch (FileNotFoundException e1) {
-			// TODO Auto-generated catch block
 			e1.printStackTrace();
 		}
 		List<Parameter> parameters = gson.fromJson(reader, new TypeToken<List<Parameter>>(){}.getType()); 
@@ -189,5 +161,13 @@ public final class OptimizationMessageEventCoordinatorImpl implements IncomingCh
 		} catch (NullPointerException | NotConnectedException | InterruptedException | XmppStringprepException e) {
 			e.printStackTrace();
 		}
+	}
+	
+	public int getResultID() {
+		return resultID;
+	}
+	
+	public List<Parameter> getParameters(){
+		return parameters;
 	}
 }
